[gd_scene load_steps=5 format=3 uid="uid://cln6mlxh7p5t8"]

[ext_resource type="Script" path="res://view.gd" id="1_xcb5l"]

[sub_resource type="StyleBoxLine" id="StyleBoxLine_mc24b"]

[sub_resource type="ViewportTexture" id="ViewportTexture_re8l5"]
viewport_path = NodePath("ScriptViewport/SubViewport")

[sub_resource type="ViewportTexture" id="ViewportTexture_hb0d8"]
viewport_path = NodePath("NoConnection/VBoxContainer/SubViewportContainer/SubViewport")

[node name="View" type="ColorRect"]
self_modulate = Color(0, 0, 0, 1)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_xcb5l")

[node name="ScriptViewport" type="SubViewportContainer" parent="."]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
stretch = true

[node name="SubViewport" type="SubViewport" parent="ScriptViewport"]
transparent_bg = true
handle_input_locally = false
size = Vector2i(1920, 1080)
render_target_update_mode = 4

[node name="ScriptMargin" type="MarginContainer" parent="ScriptViewport/SubViewport"]
unique_name_in_owner = true
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 0
theme_override_constants/margin_right = 0

[node name="ScriptScroll" type="ScrollContainer" parent="ScriptViewport/SubViewport/ScriptMargin"]
unique_name_in_owner = true
layout_mode = 2
horizontal_scroll_mode = 0
vertical_scroll_mode = 3

[node name="VBoxContainer" type="VBoxContainer" parent="ScriptViewport/SubViewport/ScriptMargin/ScriptScroll"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Spacer2" type="HSeparator" parent="ScriptViewport/SubViewport/ScriptMargin/ScriptScroll/VBoxContainer"]
custom_minimum_size = Vector2(0, 500)
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxLine_mc24b")

[node name="ScriptBox" type="RichTextLabel" parent="ScriptViewport/SubViewport/ScriptMargin/ScriptScroll/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
bbcode_enabled = true
fit_content = true
scroll_active = false

[node name="Spacer" type="HSeparator" parent="ScriptViewport/SubViewport/ScriptMargin/ScriptScroll/VBoxContainer"]
custom_minimum_size = Vector2(0, 500)
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxLine_mc24b")

[node name="Script" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("ViewportTexture_re8l5")
flip_h = true

[node name="NoConnection" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="NoConnection"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 1

[node name="SubViewportContainer" type="SubViewportContainer" parent="NoConnection/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
stretch = true

[node name="SubViewport" type="SubViewport" parent="NoConnection/VBoxContainer/SubViewportContainer"]
transparent_bg = true
handle_input_locally = false
size = Vector2i(1920, 534)
render_target_update_mode = 4

[node name="VBox" type="VBoxContainer" parent="NoConnection/VBoxContainer/SubViewportContainer/SubViewport"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="ConnectionInfo" type="RichTextLabel" parent="NoConnection/VBoxContainer/SubViewportContainer/SubViewport/VBox"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/bold_italics_font_size = 40
bbcode_enabled = true
text = "[center][i][b]No connection ...[/b][/i][/center]"
fit_content = true

[node name="InfoLabel" type="Label" parent="NoConnection/VBoxContainer/SubViewportContainer/SubViewport/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "Connect with TeleDot Controller"
horizontal_alignment = 1

[node name="IPLabel" type="Label" parent="NoConnection/VBoxContainer/SubViewportContainer/SubViewport/VBox"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "IP: %s"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="NoConnection/VBoxContainer"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="NoConnection/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
texture = SubResource("ViewportTexture_hb0d8")
flip_h = true
